Commit al master del blogspot en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer  un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div class="container">
+        <div id="post">
+            <h1>Aqui vamos a hacer  un ejemplo de GIT</h1>
+            <p>Y este es el parrafo de inicio que te mostrara como usar las ramas</p>
+        </div>
+    </div>
+    
     
 </body>
 </html>
