--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Aqui vamos a hacer  un ejemplo de GIT</h1>
             <p>Y este es el parrafo de inicio que te mostrara como usar las ramas</p>
