--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer  un ejemplo de GIT</h1>
