Agregado el contenido final del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Aqui vamos a hacer  un ejemplo de GIT</h1>
             <p>Y este es el parrafo de inicio que te mostrara como usar las ramas</p>
+            <p>Los blogs son la mejor manera de compartir informacion y tus ideas. Mucho mas que ir a confierencias o salir en Youtube</p>
         </div>
     </div>
     
