Color de fondo y logo nuevo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
+            <img id="logo" src="imgs/dragon.png" alt="">
             Hyperblog
         </div>
         <div id="post">
